k8s/step1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx
spec:
  parentRefs:
  - name: web
    namespace: gateway
  rules:
  - backendRefs:
    - name: nginx-service
      port: 80
